google map integration

--- a/src/pages/ChannelsDetail/components/Main/style.scss
+++ b/src/pages/ChannelsDetail/components/Main/style.scss
@@ -1,7 +1,5 @@
-.chanel__chat{
-    .ant-modal-content{
-        overflow: auto; 
-    }
+.chat-modal-content{
+   
     .chat_messages{
         padding: 15px;
         overflow: auto;
