the ability to go from the product page to the author page

--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -727,8 +727,15 @@
   .left__block{
     display: flex;
     align-items: center;
+    position: relative;
+    a{
+      position: absolute;
+      inset: 0;
+      z-index: 2;
+    }
     .user__desc{
       margin: 0 0 0 10px;
+     
     }
     p{
       margin: 0;
