--- a/src/components/ShortCard/style.scss
+++ b/src/components/ShortCard/style.scss
@@ -11,7 +11,7 @@
     cursor: pointer;
   }
 
-  .shortCard-content:hover {
+  .shortCard-content:hover::after {
     opacity: 1;
   }
 
@@ -33,9 +33,19 @@
     flex-direction: column;
     justify-content: end;
     background: rgba(0, 0, 0, 0.5);
-    opacity: 0;
+    
     transition: all 0.5s;
     border-radius: 16px;
+    z-index: 2;
+    &::after{
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0;
+      transition: all .4s ease-in-out;
+      z-index: -1;
+    }
     .price{
       position: absolute ;
       top: 13px ;
