--- a/src/components/ShortsPCard/style.scss
+++ b/src/components/ShortsPCard/style.scss
@@ -74,17 +74,41 @@
 
       .sp_desc {
         position: absolute;
-        bottom: 130px;
-        left: 10px;
-        max-width: 180px;
+        bottom: 70px;
         text-align: left;
+        width: 90%;
+        left: 50%;
+        
+        transform: translateX(-50%);
+        .user__block{
+          border: 0;
+          padding: 0;
+          justify-content: start;
+          align-items: center;
+          margin: 0 0 10px 0;
+          position: relative;
+          a{
+            position: absolute;
+            inset: 0;
+          }
+          h4{
+            font-size: 12px;
+            color: var(--textColor);
+            margin: 0 0 0 5px;
+          }
+          img{
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+          }
+        }
         .short__inform {
           display: flex;
-          flex-direction: column;
-          align-items: start;
+          align-items: center;
+          justify-content: space-between;
 
           position: relative;
-          padding: 10px 5px;
+          padding: 10px ;
           border-radius: 8px;
           overflow: hidden;
           z-index: 1;
@@ -103,15 +127,15 @@
             left: 0;
             top: 0;
             z-index: 1;
-            opacity: .6;
+            opacity: .4;
           }
 
         }
-
+        
         p {
           color: var(--textColor);
           font-size: 13px;
-          margin: 0 0 15px 0;
+          margin:  0;
 
           button {
             background-color: transparent;
