--- a/src/pages/ChannelsDetail/components/ChannelsVideo/style.scss
+++ b/src/pages/ChannelsDetail/components/ChannelsVideo/style.scss
@@ -133,8 +133,8 @@
 
     .premiup__icon {
         position: absolute;
-        top: 15px;
-        left: 15px;
+        top: 10px;
+        left: 9px;
         display: flex;
         align-items: center;
         background: #0385CA;
@@ -146,17 +146,12 @@
         p {
             height: initial;
             margin: 0 0 0 4px;
-            font-size: 12px;
+            font-size: 14px;
 
         }
     }
 
 
-    &:hover {
-        .premiup__icon {
-            opacity: 0;
-        }
-    }
 
     .main {
         width: 100% !important;
@@ -190,7 +185,6 @@
             top: 10px !important;
             right: 9px !important;
             width: auto;
-            height: 32px;
             flex-shrink: 0;
             border-radius: 22px;
             background-color: #0b90d4;
@@ -198,8 +192,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            backdrop-filter: blur(2.08px);
             padding: 5px 8px;
+            z-index: 77;
+            font-size: 14px;
+
         }
 
         .video_count {
