--- a/src/pages/History/style.scss
+++ b/src/pages/History/style.scss
@@ -1,9 +1,16 @@
 .history_cards {
   width: 100%;
   padding: 10px;
-  .icons{
+
+  .icons {
     width: 100%;
-    justify-content: space-between !important ;
+    justify-content: space-between !important;
+  }
+  .shortCard-content{
+    opacity: 0;
+    &:hover{
+      opacity: 1;
+    }
   }
   h4 {
     color: var(--textColor);
@@ -40,6 +47,50 @@
 
   }
 
+  .loading {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .loader {
+    display: flex;
+    align-items: center;
+  }
+
+  .bar {
+    display: inline-block;
+    width: 3px;
+    height: 20px;
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 10px;
+    animation: scale-up4 1s linear infinite;
+  }
+
+  .bar:nth-child(2) {
+    height: 35px;
+    margin: 0 5px;
+    animation-delay: .25s;
+  }
+
+  .bar:nth-child(3) {
+    animation-delay: .5s;
+  }
+
+  @keyframes scale-up4 {
+    20% {
+      background-color: #ffff;
+      transform: scaleY(1.5);
+    }
+
+    40% {
+      transform: scaleY(1);
+    }
+  }
+
+
+
   .shortCard {
     height: 400px !important;
 
@@ -54,7 +105,8 @@
       font-size: 17px;
       border-radius: 16px;
       z-index: 999;
-      &:hover{
+
+      &:hover {
         box-shadow: 0 0 5px #0b90d4;
       }
     }
@@ -64,7 +116,6 @@
       bottom: 10px !important;
       right: 9px !important;
       width: auto;
-      height: 32px;
       flex-shrink: 0;
       border-radius: 22px;
       background-color: #0b90d4;
@@ -72,8 +123,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      backdrop-filter: blur(2.08px);
       padding: 5px 8px;
+      font-size: 14px;
+
     }
   }
 
@@ -91,7 +143,7 @@
     cursor: pointer;
     background: transparent;
     color: var(--textColor);
-   
+
 
     &:hover {
       border-radius: 16px;
