--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -76,7 +76,7 @@
         justify-content: center;
         align-items: center;
 
-        img {
+        svg {
           margin-right: 5px;
         }
 
