--- a/src/pages/Profile/components/MyVideo/style.scss
+++ b/src/pages/Profile/components/MyVideo/style.scss
@@ -26,7 +26,6 @@
       bottom: 10px !important;
       right: 9px !important;
       width: auto;
-      height: 32px;
       flex-shrink: 0;
       border-radius: 22px;
       background-color: #0b90d4;
@@ -34,8 +33,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      backdrop-filter: blur(2.08px);
       padding: 5px 8px;
+      font-size: 14px;
+
     }
 
     .heading {
