--- a/src/components/ShortCard/style.scss
+++ b/src/components/ShortCard/style.scss
@@ -17,7 +17,7 @@
 
   .shortCard-content > * {
     transform: translateY(0);
-    transition: all 0.5s;
+    transition: all 0.4s ease-in-out;
   }
 
   .shortCard-content:hover > * {
@@ -32,7 +32,6 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    background: rgba(0, 0, 0, 0.5);
     
     transition: all 0.5s;
     border-radius: 16px;
